XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Changed peer.URL::addParams() and peer.URL::addParam() to throw a
  lang.IllegalArgumentException if the parameter to be added already
  exists
  (friebe)
- Refactored scriptlet API classes to make them testable
  (friebe)

Features
~~~~~~~~
- Added support for array parameters to peer.URL (num[]=one&num[]=two)
  (friebe)
- Added peer.URL::hasParam() method to test for existance of a single
  parameter - it complements hasParams()
  (friebe)
- Added peer.URL::setParams() and peer.URL::setParam() methods
  (friebe)
- Added xml.Stylesheet::addTemplate() (and withTemplate()) which work 
  with xml.XslTemplate instances.
  (friebe)
- Added xml.Node::withChild() method to complete addChild() - but instead
  of returning the child returns the node itself.
  http://news.xp-framework.net/article/318/2009/09/21/
  (friebe)
- Added various with*() methods to xml.Stylesheet to complement their
  add*() counterparts - but instead return the stylesheet instance to
  allow for a fluent API.
  (friebe)
- Changed scriptlet error pages to use data protocol instead of relying
  on an image named "err.gif" in the document root's /image subdirectory
  (friebe)
- Added rdbms.finder.FinderMethod::getFinder() method
  (friebe)
- Added getInputStream() and getOutputStream() methods to io.File
  (friebe)
- Added getInputStream() and getOutputStream() methods to peer.Socket
  (friebe)
- Added possibility to pass an associative array to HTTP request params
  (friebe)

Bugfixes
~~~~~~~~
- Fixed peer.URL::getQuery() and peer.URL::hashCode() not being returning
  the correct values after the URL object has been modified
  (friebe)
- Fixed newline detection in StreamReader::readLine()
  (hinckel)
- Fixed XPath constructor to include XML declaration when creating XPath